# bom_version_control

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/2024-04-03-214802_create_components/: down.sql  up.sql
migrations/2024-04-09-192228_create_boms/: down.sql  up.sql
migrations/2024-04-09-192920_create_boms_components/: down.sql  up.sql
migrations/2024-04-18-195644_create_bom_versions/: down.sql  up.sql
scripts/: init_db_script.sh
src/: configuration.rs  errors.rs  lib.rs  main.rs  schema.rs  startup.rs  telemetry.rs
src/db/: connection.rs  mod.rs  operations.rs
src/db/models/: db_bom.rs  db_bom_version.rs  db_boms_component.rs  db_component.rs  mod.rs
src/domain/: error.rs  mod.rs  validation.rs
src/domain/models/: bom.rs  bom_change_event.rs  bom_version.rs  component.rs  diff.rs  mod.rs
src/domain/newtypes/: mod.rs  new_bom.rs  new_component.rs
src/infrastructure/: aliases.rs  connection.rs  error.rs  mod.rs
src/infrastructure/models/: bom.rs  bom_components.rs  bom_version.rs  component.rs  mod.rs
src/infrastructure/repositories/: bom_repository.rs  component_repository.rs  mod.rs  repository.rs
src/routes/: boms.rs  components.rs  error.rs  health_check.rs  mod.rs
src/services/: bom_service.rs  component_service.rs  converters.rs  error.rs  mod.rs
tests/: boms.rs  components.rs  health_check.rs  helpers.rs
tests/api/: components.rs  health_check.rs  helpers.rs  main.rs
