[package]
name = "bom_version_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bom_version_control"

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.82"
chrono = { version = "0.4.37", features = ["serde"] }
config = "0.14.0"
derive_more = "0.99.17"
diesel = { version = "2.1.5", features = ["postgres", "uuid", "r2d2", "chrono", "postgres_backend", "serde_json"] }
dotenv = "0.15.0"
rand = "0.8.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }

[dev-dependencies]
diesel_cli = { version = "2.1.1", features = ["postgres"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
once_cell = "1.19.0"
reqwest = { version = "0.12.2", features = ["json"] }
